# SpeakEasy

./: .claudeignore  .env.production  .gitignore  .mcp.json  .temp-openai-key.md  CLAUDE.md  DUPLICATE_PROCESS_FIX_SUMMARY.md  README.md  SpeakEasy_1.0.0_x64-setup - Shortcut.lnk  TRANSFORM_FEATURE_PLAN.md  brand-manager.html  dev.bat  eslint.config.js  index.html  overlay.html  package-lock.json  package.json  profile-chooser.html  speakeasy-srs.md  statusbar.html  tailwind.config.js  vite.config.ts  vitest.config.ts  voice-review.html  wrapup.bat
.claude/: framework-manifest.json  settings.json  settings.local.json
.claude/commands/: FB-campaign-analysis.md  cheat-sheet.md  codebase-workflow-audit.md  customer-journey-workflow-audit.md  handoff.md  initial-setup-step1-srs-creation.md  initial-setup-step2-srs-analyze-and-skills.md  (+13 more)
MacOS-Build/: macOS-Port-Plan.md  macOS-Testing-Workflow.md
SOP-docs/: test-protocol-SOP.md  wrapup-SOP.md
beta-site/: .env.example  middleware.ts  package.json
bug-analysis/: README.md
docs/: BETA_QUICKSTART.md  BUILD-STATUS.md  CHANGELOG.md  DECISION-LOG.md  MASTER-PLAN.md  USER_GUIDE.md  workflow-development-log.md
lessons-learned/: 2025-12-14-build-and-autostart-lessons.md  2025-12-14__backend-keyring__fixed-model-selector-api-key-storage-and-git-setup.md  2025-12-14__backend-keyring__fixed-model-selector-api-key-storage.md  2025-12-14__devops__add-dev-restart-and-json-index.md  2025-12-14__devops__add-strict-rust-checking.md  2025-12-14__devops__add-wrapup-sop.md  2025-12-14__devops__create-wrapup-sop-system.md  2025-12-15__devops__enhance-wrapup-auto-restart-search.md  2025-12-15__devops__fix-wrapup-slash-command.md  2025-12-16__bugfix__fix-duplicate-process-single-instance.md  2025-12-16__feature__implement-always-on-top-status-bar.md  2025-12-16__fix__duplicate-process-single-instance.md  2025-12-17__bugfix__fix-claude-code-notification-hooks.md  2025-12-17__bugfix__fix-overlay-zorder-subclassing.md  2025-12-17__bugfix__fix-profile-chooser-zorder.md  2025-12-17__devops__debug-hidden-instance.md  2025-12-17__feature__chrome-profile-chooser-for-url-hotkeys.md  2025-12-17__feature__file-based-settings-persistence.md  2025-12-17__feature__prompt-actions-hotkey-llm.md  2025-12-17__feature__unify-prompt-action-dropdown.md  2025-12-17__feature__webhook-url-actions.md  2025-12-18__bugfix__fix-profile-chooser-topmost-window.md  2025-12-18__bugfix__fix-profile-chooser-topmost.md  2025-12-18__bugfix__fix-voice-command-fuzzy-match.md  2025-12-18__devops__nsis-delete-old-shortcut.md  2025-12-18__devops__optimize-wrapup-workflow.md  2025-12-18__devops__split-wrapup-test-protocol.md  2025-12-18__docs__macos-port-plan.md  2025-12-18__feature__fix-chrome-profile-chooser.md  2025-12-18__feature__voice-command-hotkeys.md  2025-12-19__bugfix__fix-profile-chooser-minimize-and-cancel.md  2025-12-19__frontend__settings-ui-cleanup-collapsible-sections.md  2025-12-20__devops__fix-corrupted-commands-add-claude-md.md  2025-12-20__feature__beta-readiness-license-updates-docs.md  2025-12-20__feature__beta-readiness-licensing-updates-docs.md  2025-12-20__frontend__defer-settings-api-calls.md  2025-12-20__frontend__settings-panel-reorganization.md  2025-12-20__frontend__settings-panel-ux-improvements.md  2026-02-18__bugfix__fix-ai-transform-silent-errors-and-vite-build.md  2026-02-18__devops__bulletproof-admin-license-and-process-guardrails.md  (+12 more)
plan/: README.md  fix_tauri_build_cargo_error.md
scripts/: generate-icons.cjs  lessons-search.mjs  test-protocol.mjs  wrapup.mjs
src/: App.tsx  brandManager.tsx  overlay.tsx  profileChooser.tsx  statusbar.tsx  voiceReview.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  brands.rs  clipboard.rs  commands.rs  config.rs  diagnostics.rs  feedback.rs  hotkeys.rs  lib.rs  license.rs  llm.rs  main.rs  secrets.rs  state.rs  target_window.rs  transcription.rs  window_topmost.rs
src-tauri/windows/: hooks.nsh
supabase/: README.md
(+123 files in other folders)
